--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,4 +31,4 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn clean test
+      run: mvn clean -Dtest=ElementsFormSubmitTest test
