--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,5 +30,10 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    # - name: Build with Maven
+    #   run: mvn clean -Dtest=ElementsFormSubmitTest test
     - name: Build with Maven
-      run: mvn clean -Dtest=ElementsFormSubmitTest test
+      run: google-chrome --version
+
+    - name: Build with Maven
+      run: google-chrome-stable --version
