--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,13 +27,13 @@ jobs:
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: '17'
+        java-version: '21'
         distribution: 'temurin'
         cache: maven
-    # - name: Build with Maven
-    #   run: mvn clean -Dtest=ElementsFormSubmitTest test
     - name: Build with Maven
+      run: mvn clean -Dtest=ElementsFormSubmitTest test
+    - name: check chrome version 1
       run: google-chrome --version
 
-    - name: Build with Maven
+    - name: check chrome version 2
       run: google-chrome-stable --version
